--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/my-data-guest-website/text_stacked.png?v=2" />
-    <link rel="shortcut icon" type="image/png" href="/my-data-guest-website/text_stacked.png?v=2" />
+    <link rel="icon" type="image/png" href="/text_stacked.png?v=2" />
+    <link rel="shortcut icon" type="image/png" href="/text_stacked.png?v=2" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
